cmake_minimum_required(VERSION 3.1)
project(pollax)
set(INCLUDE_DIRECTORIES ../src)
set(CMAKE_INCLUDE_PATH ../ext/include/botan-1.11)
link_directories(../ext/lib)
find_library(BOTAN_LIB botan-1.11 ../ext/lib)
find_library(TCM_LIB tcmalloc ../ext/lib)
set(CMAKE_C_COMPILER "/usr/bin/clang")
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
set(CMAKE_LINKER "/usr/bin/ld.gold")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -std=c++14 -flto  -g3 -O0  -gdwarf-4 -fno-eliminate-unused-debug-types  -Wall -Werror -fvisibility=hidden -fvisibility-inlines-hidden ")
set(HEADER_FILES ../src/clock.hpp ../src/endians.hpp ../src/engine.hpp ../src/logger.hpp ../src/query.hpp ../src/resolver.hpp ../src/resolverimpl.hpp ../src/resouces.hpp ../src/semaphore.hpp ../src/socket.hpp ../src/syncqueue.hpp ../src/tcpconn.hpp ../src/tcplistener.hpp ../src/tcpstream.hpp ../src/timeevent.hpp ../src/timers.hpp ../src/tlsclientwrapper.hpp ../src/tlscredentials.hpp ../src/tlstcpstream.hpp ../src/types.hpp ../src/udpsocket.hpp ../src/utils.hpp)
set(SOURCE_FILES ../src/clock.cpp ../src/enc_ocb.cpp ../src/engine.cpp ../src/logger.cpp ../src/main.cpp ../src/query.cpp ../src/resolver.cpp ../src/resolverimpl.cpp ../src/resouces.cpp ../src/semaphore.cpp ../src/socket.cpp ../src/tcpconn.cpp ../src/tcplistener.cpp ../src/tcpstream.cpp ../src/timers.cpp ../src/timevent.cpp ../src/tlsclientwrapper.cpp ../src/tlscredentials.cpp ../src/tlstcpstream.cpp ../src/udpsocket.cpp ../src/utils.cpp)
set(CMAKE_EXE_LINKER_FLAGS "${BOTAN_LIB} ${TCM_LIB}")
add_executable(pollax ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(pollax ${BOTAN_LIB} ${TCM_LIB})
